# react-fastapi-auth

client/: package-lock.json
client/src/: App.js  Form.css  Form.js  Login.js  Register.js  index.js
server/: .env  .gitignore  auth.py  database.db  database.py  main.py  models.py  pyproject.toml
